--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".acercaDeActivity"
+            android:label="Acerca de ..."
+            android:theme="@android:style/Theme.Dialog"
+            />
     </application>
 
 </manifest>
