--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fva.asteroides">
 
+    <uses-permission android:name ="android.permission.RECEIVE_SMS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_mi_icono"
@@ -9,6 +11,12 @@
         android:roundIcon="@mipmap/ic_mi_icono"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
+        <receiver android:name="ReceptorSMS" >
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat">
