Añadiendo puntuacion Menos XML

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'res/'] } }
 }
 
 dependencies {
+    compile 'com.google.code.gson:gson:2.6.2'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
